apps/codecorner/codecorner-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: codecorner-blog
  namespace: balhau-dev
  labels:
    version: 0.0.1
    app: codecorner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codecorner
  template:
    metadata:
      labels:
        app: codecorner
    spec:
      containers:
      - name: codecorner
        image: 10.108.252.69:5000/balhau/codecorner:armv6-0.0.1
        volumeMounts:
        - name: codecorner-store
          mountPath: /opt/ghost
        ports:
        - containerPort: 2368
          name: registry
          protocol: TCP
      volumes:
      - name: codecorner-store
        persistentVolumeClaim:
          claimName: codecorner-pvc
