apps/codecorner/codecorner-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codecorner-blog-ingress
  namespace: balhau-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: codecorner-blog-certificate
      hosts:
        - codecorner.balhau.net
  rules:
  - host: codecorner.balhau.net
    http:
      paths:
      - path: /
        backend:
          serviceName: codecorner-blog
          servicePort: 2368
