apps/codecorner/test-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: codecorner-blog
    servicePort: 2368
